--- a/src/Components/InteractionTile/InteractionTile.scss
+++ b/src/Components/InteractionTile/InteractionTile.scss
@@ -12,7 +12,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 2vmin;
     &:hover {
         box-shadow: 0px 8px 40px rgba(205, 134, 60, 0.92);
         transform: scale(1.05);
@@ -24,6 +23,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    margin-bottom: 2vmin;
 
     svg {
         width: 70%;
