--- a/src/Components/NoteModal/NoteModal.scss
+++ b/src/Components/NoteModal/NoteModal.scss
@@ -24,7 +24,7 @@
         width: -moz-fit-content;
         width: fit-content;
         margin: auto;
-        padding: 40px;
+        padding: 60px;
         background-color: white;
         border: 1px solid #888;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
@@ -49,8 +49,8 @@
         .button-container {
             display: flex;
             width: 100%;
-            gap: 40px;
             justify-content: center;
+            margin-top: 30px;
 
             button {
                 padding: 20px;
@@ -67,22 +67,39 @@
                     transform: scale(1.04);
                     box-shadow: 0px 0px 40px #fdd68b;
                 }
+            }
+
+            .yes-button {
+                color: #048644;
+                border: 2px solid #048644;
+                background-color: transparent;
+                width: 30vw;
+
+                &.highlighted {
+                    color: white;
+                    background-color: #048644;
+                }
+
                 &.disabled {
                     pointer-events: none;
                     background-color: lightgrey;
-                    border: none;
+                    color: white;
+                    border: 2px solid lightgrey;
                     box-shadow: none;
                 }
             }
 
-            .yes-button {
-                background-color: #048644;
-                width: 30vw;
-            }
-
             .no-button {
-                background-color: #aa3b4a;
+                color: #aa3b4a;
+                border: 2px solid #aa3b4a;
+                background-color: transparent;
                 width: 30vw;
+                margin-right: 40px;
+
+                &.highlighted {
+                    color: white;
+                    background-color: #aa3b4a;
+                }
             }
         }
     }
@@ -99,9 +116,11 @@
         transform-origin: center;
         transition: 0.3s ease-in-out;
         &:hover,
-        &:focus {
+        &:focus,
+        &.highlighted {
             outline: none;
             transform: scale(1.1);
+            box-shadow: 0 0 0 4px rgb(63, 70, 170);
         }
     }
 }
